[package]
name = "crav1e"
version = "0.1.0"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]

[lib]
name = "rav1e"
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = { git="https://github.com/lu-zero/cbindgen" }

[dependencies]
libc = "0.2"
winapi = { git = "https://github.com/retep998/winapi-rs.git", branch = "0.3" }

[dependencies.rav1e]
git = "https://github.com/xiph/rav1e"
default-features = false

[profile.release]
debug = true

[workspace]
members = [ "dummy" ]
